@@ -19,8 +19,7 @@ extern void p(char *c,...)
 #define a(x) ((x) == 0 ? as(#x, __FILE__, __LINE__):(void)0)
 
 #define BACKING_STORAGE_SIZE 8192
-char *backing_storage;
-char *buffer = &backing_storage[1];
+char *buffer;
 #define buffer_size (BACKING_STORAGE_SIZE-2)
 unsigned buffer_p, buffer_len;
 char *buffer_gap;
@@ -41,7 +40,7 @@ void buffer_invariants()
 
 void testBug(void)
 {
-	backing_storage = (unsigned char *)(0xa5a5);
+	buffer = (unsigned char *)(0xa5a5);
 	buffer_len = 1;
 	buffer_p = 0;
 	buffer_gap = buffer + buffer_size - buffer_len + buffer_p;
